syntax = "proto3";

package imagespb;

option go_package = "github.com/DarioRoman01/grpc/imagespb"; 

message UploadRequest {
    string mime = 1;
    bytes chunk = 2;
}
 
message UploadResponse {
    string name = 1;
}

service UploadService {
    rpc Upload(stream UploadRequest) returns (UploadResponse) {}
}